--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -48,7 +48,8 @@
 "05_components/components.heading",
 "05_components/components.slider-movies",
 "05_components/components.movie-card",
-"05_components/components.search"
+"05_components/components.search",
+"05_components/components.button"
 ;
 
 // ------------------ //
@@ -68,6 +69,7 @@
 a {
   text-decoration: none;
 }
+
 .link {
   text-decoration: inherit;
 }
