--- a/src/assets/styles/05_components/_components.movie-card.scss
+++ b/src/assets/styles/05_components/_components.movie-card.scss
@@ -20,6 +20,14 @@
   aspect-ratio: 300 / 450;
 }
 
+.movie-card__no-picture {
+  border-radius: var(--radius-md);
+  background-color: var(--person-card-no-picture-bg);
+  height: 100%;
+  width: 100%;
+  aspect-ratio: 300/450;
+}
+
 .movie-card__infos {
   margin-top: 1.6rem;
   display: flex;
