--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -49,7 +49,9 @@
 "05_components/components.slider-movies",
 "05_components/components.movie-card",
 "05_components/components.search",
-"05_components/components.button"
+"05_components/components.button",
+"05_components/components.person-card",
+"05_components/components.slider-persons"
 ;
 
 // ------------------ //
