edit single movie + edit single movie  responsive

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -51,7 +51,8 @@
 "05_components/components.search",
 "05_components/components.button",
 "05_components/components.person-card",
-"05_components/components.slider-persons"
+"05_components/components.slider-persons",
+"05_components/components.single-movie"
 ;
 
 // ------------------ //
