--- a/src/assets/styles/01_settings/_settings.colors.scss
+++ b/src/assets/styles/01_settings/_settings.colors.scss
@@ -6,7 +6,7 @@
 
   --color-neutral-0: rgba(255, 255, 255, 1);
 
-  --color-neutral-1: #161616;
+  --color-neutral-1: rgba(22, 22, 22, 1);
   --color-neutral-2: rgba(102, 115, 132, 1);
   --color-neutral-3: rgba(167, 177, 192, 1);
 
