--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -52,7 +52,8 @@
 "05_components/components.button",
 "05_components/components.person-card",
 "05_components/components.slider-persons",
-"05_components/components.single-movie"
+"05_components/components.single-movie",
+"05_components/components.layout"
 ;
 
 // ------------------ //
@@ -89,17 +90,4 @@ ul {
   list-style: none;
   padding: 0;
   margin: 0;
-}
-
-header {
-  padding: 2rem 0;
-  display: flex;
-  align-items: center;
-  gap: 2rem;
-
-  div {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-  }
 }
