--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -53,7 +53,10 @@
 "05_components/components.person-card",
 "05_components/components.slider-persons",
 "05_components/components.single-movie",
-"05_components/components.layout"
+"05_components/components.layout",
+"05_components/components.movie-backdrop",
+"05_components/components.movie-infos",
+"05_components/components.trailer"
 ;
 
 // ------------------ //
