--- a/src/assets/styles/05_components/_components.layout.scss
+++ b/src/assets/styles/05_components/_components.layout.scss
@@ -27,3 +27,15 @@
   align-items: center;
   gap: $space-16;
 }
+
+.c-layout__footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 40rem;
+
+  @include max-width(md) {
+    height: 20rem;
+  }
+}
