--- a/src/assets/styles/05_components/_components.movie-infos.scss
+++ b/src/assets/styles/05_components/_components.movie-infos.scss
@@ -12,6 +12,12 @@
   display: flex;
   flex-direction: column;
   gap: $space-10;
+
+  & > ul {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
 }
 
 .c-movie-infos__genres {
@@ -21,5 +27,11 @@
 
   li:not(:last-child)::after {
     content: ',';
+  }
+}
+
+.c-movie-infos__networks {
+  span:not(:last-child)::after {
+    content: ', ';
   }
 }
