edit tv single page + sliders navigation

--- a/src/assets/styles/05_components/_components.layout.scss
+++ b/src/assets/styles/05_components/_components.layout.scss
@@ -30,6 +30,8 @@
 
 .c-layout__footer {
   display: flex;
+  flex-direction: column;
+  gap: $space-20;
   justify-content: center;
   align-items: center;
   width: 100%;
