--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -56,7 +56,9 @@
 "05_components/components.layout",
 "05_components/components.movie-backdrop",
 "05_components/components.movie-infos",
-"05_components/components.trailer"
+"05_components/components.trailer",
+"05_components/components.slider-seasons",
+"05_components/components.home"
 ;
 
 // ------------------ //
