--- a/src/assets/styles/05_components/_components.slider-seasons.scss
+++ b/src/assets/styles/05_components/_components.slider-seasons.scss
@@ -1,7 +1,8 @@
-.c-slider-movies {
+.c-slider-seasons {
+
 }
 
-.c-slider-movies__swiper {
+.c-slider-seasons__swiper {
   @include max-width(md) {
     margin: 0 calc(var(--page-gutter) * -1) ! important;
     padding: 0 var(--page-gutter) !important;
@@ -14,15 +15,13 @@
   }
 }
 
-.c-slider-movies__intro {
+.c-slider-seasons__intro {
   margin-bottom: $space-24;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  text-align: center;
 }
 
-.swiper-prev,
-.swiper-next {
+.person-prev,
+.person-next {
   border: 0;
   background-color: transparent;
   font-size: 3rem;
@@ -39,13 +38,13 @@
   }
 }
 
-.c-slider-movies__nav {
+.c-slider-seasons__nav {
   margin-top: $space-24;
   display: flex;
   gap: $space-10;
-  justify-content: end;
+  justify-content: center;
 
   @include max-width(md) {
-   display: none;
+    display: none;
   }
 }
