add type tv in slider movies

--- a/src/assets/styles/05_components/_components.slider-movies.scss
+++ b/src/assets/styles/05_components/_components.slider-movies.scss
@@ -21,6 +21,20 @@
   justify-content: space-between;
 }
 
+.c-slider-movies__title {
+  display: flex;
+  align-items: center;
+  gap: $space-12;
+}
+
+.c-slider-movies__select {
+  border: 0;
+  background-color: #fff;
+  padding: .5rem 1rem;
+  border-radius: 1rem;
+  outline: none;
+}
+
 .swiper-prev,
 .swiper-next {
   border: 0;
