--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -58,7 +58,8 @@
 "05_components/components.movie-infos",
 "05_components/components.trailer",
 "05_components/components.slider-seasons",
-"05_components/components.home"
+"05_components/components.home",
+"05_components/components.toggle-buttons"
 ;
 
 // ------------------ //
