--- a/src/assets/styles/05_components/_components.slider-movies.scss
+++ b/src/assets/styles/05_components/_components.slider-movies.scss
@@ -16,15 +16,23 @@
 
 .c-slider-movies__intro {
   margin-bottom: $space-24;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+
+  &:has(.c-slider-movies__more-cta) {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
 
 .c-slider-movies__title {
   display: flex;
-  align-items: center;
+  flex-direction: column;
   gap: $space-12;
+
+  @include min-width(md) {
+    align-items: center;
+    flex-direction: row;
+  }
 }
 
 .swiper-prev,
