edit toggle buttons is active color

--- a/src/assets/styles/01_settings/_settings.colors.scss
+++ b/src/assets/styles/01_settings/_settings.colors.scss
@@ -42,6 +42,7 @@
   // TOGGLE BUTTONS
   --toggle-buttons-border: var(--color-neutral-0);
   --toggle-buttons-active-bg: var(--color-secondary-1);
+  --toggle-buttons-active: var(--color-primary-0);
 
   .c-button {
     --button-label: var(--text-default);
