--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -49,7 +49,7 @@
 "05_components/components.slider-movies",
 "05_components/components.movie-card",
 "05_components/components.search",
-"05_components/components.button",
+"05_components/components.cta",
 "05_components/components.person-card",
 "05_components/components.slider-persons",
 "05_components/components.single-movie",
@@ -59,7 +59,8 @@
 "05_components/components.trailer",
 "05_components/components.slider-seasons",
 "05_components/components.home",
-"05_components/components.toggle-buttons"
+"05_components/components.toggle-buttons",
+"05_components/components.slider-tabs-movies"
 ;
 
 // ------------------ //
