edit episodes rating responsive

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -60,7 +60,8 @@
 "05_components/components.slider-seasons",
 "05_components/components.home",
 "05_components/components.toggle-buttons",
-"05_components/components.slider-tabs-movies"
+"05_components/components.slider-tabs-movies",
+"05_components/components.episodes-rating"
 ;
 
 // ------------------ //
