--- a/src/assets/styles/01_settings/_settings.colors.scss
+++ b/src/assets/styles/01_settings/_settings.colors.scss
@@ -8,8 +8,9 @@
 
   --color-neutral-1: rgba(22, 22, 22, 1);
   --color-neutral-1-50: rgba(22, 22, 22, .5);
-  --color-neutral-2: rgba(102, 115, 132, 1);
-  --color-neutral-3: rgba(167, 177, 192, 1);
+  --color-neutral-2: #252525;
+  --color-neutral-3: rgba(102, 115, 132, 1);
+  --color-neutral-4: rgba(167, 177, 192, 1);
 
   --color-secondary-1: #F4CE14;
 
@@ -28,7 +29,7 @@
   --text-default: var(--color-primary-0);
   --text-secondary: var(--color-secondary-1);
   --text-white: var(--color-neutral-0);
-  --text-light: var(--color-neutral-3);
+  --text-light: var(--color-neutral-4);
 
   --link: var(--color-primary-3);
 
@@ -43,6 +44,9 @@
   --toggle-buttons-border: var(--color-neutral-0);
   --toggle-buttons-active-bg: var(--color-secondary-1);
   --toggle-buttons-active: var(--color-primary-0);
+
+  // EPISODES RATING
+  --episodes-rating-bg: var(--color-neutral-2);
 
   .c-cta {
     --button-label: var(--text-default);
