--- a/src/assets/styles/05_components/_components.single-movie.scss
+++ b/src/assets/styles/05_components/_components.single-movie.scss
@@ -29,6 +29,12 @@
   }
 }
 
+.c-single-movie__title {
+  @include min-width(lg) {
+    max-width: 50%;
+  }
+}
+
 .c-single-movie__infos {
   @include min-width(md) {
     display: grid;
