start single person page

--- a/src/assets/styles/01_settings/_settings.colors.scss
+++ b/src/assets/styles/01_settings/_settings.colors.scss
@@ -38,7 +38,7 @@
   --search-field-bg: var(--color-neutral-0);
 
   // PERSON CARD
-  --person-card-no-picture-bg: var(--color-primary-0-50);
+  --person-card-no-picture-bg: var(--color-neutral-2);
 
   // TOGGLE BUTTONS
   --toggle-buttons-border: var(--color-neutral-0);
