--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -61,7 +61,8 @@
 "05_components/components.home",
 "05_components/components.toggle-buttons",
 "05_components/components.slider-tabs-movies",
-"05_components/components.episodes-rating"
+"05_components/components.episodes-rating",
+"05_components/components.single-person"
 ;
 
 // ------------------ //
