edit single person page

--- a/src/assets/styles/01_settings/_settings.colors.scss
+++ b/src/assets/styles/01_settings/_settings.colors.scss
@@ -28,6 +28,7 @@
 
   --text-default: var(--color-primary-0);
   --text-secondary: var(--color-secondary-1);
+  --text-dark-light: var(--color-neutral-1);
   --text-white: var(--color-neutral-0);
   --text-light: var(--color-neutral-4);
 
