--- a/src/assets/styles/01_settings/_settings.spacing.scss
+++ b/src/assets/styles/01_settings/_settings.spacing.scss
@@ -16,6 +16,7 @@ $space-64: 6.4rem;
 $space-72: 7.2rem;
 $space-80: 8rem;
 $space-96: 9.6rem;
+$space-100: 10rem;
 $space-112: 11.2rem;
 $space-128: 12.8rem;
 $space-144: 14.4rem;
