--- a/src/assets/styles/05_components/_components.movie-card.scss
+++ b/src/assets/styles/05_components/_components.movie-card.scss
@@ -26,6 +26,9 @@
   height: 100%;
   width: 100%;
   aspect-ratio: 300/450;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .movie-card__infos {
