--- a/src/assets/styles/05_components/_components.person-card.scss
+++ b/src/assets/styles/05_components/_components.person-card.scss
@@ -42,4 +42,7 @@
   height: 100%;
   width: 100%;
   aspect-ratio: 300/450;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
