--- a/src/assets/styles/05_components/_components.search.scss
+++ b/src/assets/styles/05_components/_components.search.scss
@@ -28,6 +28,10 @@
   box-shadow: inset 0 0 0 2px var(--search-field-bg);
   outline: 0;
 
+  &::placeholder {
+    color: var(--text-light);
+  }
+
   &:focus {
     box-shadow: inset 0 0 0 2px var(--text-secondary);
   }
