edit single person page + edit slider tabs movies component + add team slider in single movie page

--- a/src/assets/styles/01_settings/_settings.colors.scss
+++ b/src/assets/styles/01_settings/_settings.colors.scss
@@ -54,6 +54,10 @@
   --pagination-button-bg: var(--color-neutral-0-50);
   --pagination-button-bg-hover: var(--color-secondary-1);
 
+  // TAG
+  --tag-bg: var(--color-neutral-3);
+
+  // CTA
   .c-cta {
     --button-label: var(--text-default);
     --button-label-hover: var(--text-default);
