--- a/src/assets/styles/05_components/_components.toggle-buttons.scss
+++ b/src/assets/styles/05_components/_components.toggle-buttons.scss
@@ -18,6 +18,11 @@
     width: inherit;
   }
 
+  &:disabled {
+    opacity: .5;
+    pointer-events: none;
+  }
+
   &.is-active {
     color: var(--toggle-buttons-active);
     background-color: var(--toggle-buttons-active-bg);
