--- a/src/assets/styles/05_components/_components.search.scss
+++ b/src/assets/styles/05_components/_components.search.scss
@@ -1,81 +1,142 @@
-.c-search {
-  position: relative;
-}
-
-.c-search__form {
-  position: relative;
-  width: 100%;
-  max-width: 50rem;
-  margin: 0 auto;
-}
-
-.c-search__icon {
-  position: absolute;
-  right: $space-16;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-.c-search__field {
-  display: flex;
+.c-search__search-field {
   border: 0;
-  background-color: transparent;
-  padding: $space-16 4.6rem $space-16 $space-16;
-  border-radius: $space-10;
-  width: 100%;
-  margin: 0 auto;
-  color: var(--text-white);
-  box-shadow: inset 0 0 0 2px var(--search-field-bg);
-  outline: 0;
-
-  &::placeholder {
-    color: var(--text-light);
-  }
-
-  &:focus {
-    box-shadow: inset 0 0 0 2px var(--text-secondary);
-  }
-}
-
-.c-search__results {
-  background-color: var(--search-results-bg);
-  position: absolute;
-  z-index: 2;
-  padding: $space-10;
-  border-radius: $space-10;
-  color: #000;
+  background-color: #fff;
+  padding: 1rem 1.5rem;
   max-width: 50rem;
-  left: 0;
-  right: 0;
-  margin: $space-10 auto 0 auto;
+  width: 100%;
+  display: flex;
+  margin: 0 auto 3.2rem auto;
+  border-radius: var(--radius-full);
 }
 
-.c-search__results-list {
+.c-search__content {
   display: flex;
   flex-direction: column;
-  gap: $space-10;
+  gap: 3.2rem;
+
+  //&:has(.c-search__result-card) {
+  //  display: grid;
+  //}
+
+  @include min-width(md) {
+    grid-template-columns: 20rem 2fr;
+    display: grid;
+  }
+}
+
+.c-search__facets {
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+}
+
+.c-search__reset {
+  color: var(--text-white);
+  text-decoration: underline;
+
+  p {
+    opacity: .5;
+  }
+}
+
+.c-search__facet {
+  background-color: var(--color-neutral-2);
+  padding: 2rem;
+  border-radius: var(--radius-md);
+  height: fit-content;
+
+  &:has(.c-search__facet-content--open) .c-search__facet-toggle i {
+    transform: rotate(180deg);
+  }
+}
+
+.c-search__facet-intro {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+}
+
+.c-search__facet-toggle {
+  @include min-width(md) {
+    display: none;
+  }
+
+  &::before {
+    content: '';
+    display: block;
+    position: absolute;
+    inset: 0;
+  }
+}
+
+.c-search__facet-content {
+  @include max-width(md) {
+    max-height: 0;
+    opacity: 0;
+    pointer-events: none;
+
+    &--open {
+      max-height: inherit;
+      opacity: 1;
+      pointer-events: all;
+    }
+  }
+
+  & > div {
+    padding-top: $space-16;
+  }
+}
+
+.c-search__facet-field {
+  border: 0;
+  background-color: #fff;
+  border-radius: var(--radius-full);
+  padding: .5rem 1.5rem;
+  height: auto;
+  width: 100%;
+}
+
+.c-search__facet-list {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 
   li {
     display: flex;
     align-items: center;
     gap: .5rem;
-    width: fit-content;
-    position: relative;
-  }
-
-  li img {
-    height: 8rem;
   }
 }
 
-.c-search__link {
-  display: flex;
-  flex-direction: column;
+.c-search__result-cards {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 2rem;
+  height: fit-content;
 
-  &::before {
-    content: "";
-    display: block;
-    position: absolute;
-    inset: 0;
+  @include max-width(lg) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @include max-width(md) {
+    grid-template-columns: 1fr;
+  }
+}
+
+.c-search__pagination {
+  display: flex;
+  width: 100%;
+  margin-top: 3.2rem;
+
+  &.ais-Pagination--noRefinement {
+    display: none;
+  }
+
+  ul {
+    display: flex;
+    align-items: center;
+    gap: .5rem
   }
 }
