--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -63,7 +63,8 @@
 "05_components/components.slider-tabs-movies",
 "05_components/components.episodes-rating",
 "05_components/components.single-person",
-"05_components/components.movies"
+"05_components/components.movies",
+"05_components/components.home-search"
 ;
 
 // ------------------ //
