--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -64,7 +64,8 @@
 "05_components/components.episodes-rating",
 "05_components/components.single-person",
 "05_components/components.movies",
-"05_components/components.home-search"
+"05_components/components.home-search",
+"05_components/components.tag"
 ;
 
 // ------------------ //
