edit single movie spacing

--- a/src/assets/styles/05_components/_components.single-movie.scss
+++ b/src/assets/styles/05_components/_components.single-movie.scss
@@ -1,11 +1,7 @@
 .c-single-movie {
   display: flex;
   flex-direction: column;
-  gap: 20rem;
-
-  @include max-width(md) {
-    gap: 10rem;
-  }
+  gap: 10rem;
 }
 
 .c-single-movie__titles {
@@ -22,6 +18,10 @@
       width: fit-content;
       height: 50rem;
     }
+  }
+
+  @include min-width(md) {
+    margin-bottom: 10rem;
   }
 
   @include max-width(md) {
