edit not found page + edit single movie, person and serie not found page

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -65,7 +65,8 @@
 "05_components/components.single-person",
 "05_components/components.movies",
 "05_components/components.home-search",
-"05_components/components.tag"
+"05_components/components.tag",
+"05_components/components.not-found"
 ;
 
 // ------------------ //
