edit responsive titles size

--- a/src/assets/styles/05_components/_components.heading.scss
+++ b/src/assets/styles/05_components/_components.heading.scss
@@ -18,6 +18,12 @@
   @include text('h-xl', $font-weight: 500, $font-family: var(--font-secondary));
 }
 
+.c-h-xl-mob {
+  @include max-width(md) {
+    @include text('h-xl', $font-weight: 500, $font-family: var(--font-secondary));
+  }
+}
+
 .c-h-l {
   @include text('h-l', $font-weight: 500, $font-family: var(--font-secondary));
 }
