--- a/src/assets/styles/05_components/_components.not-found.scss
+++ b/src/assets/styles/05_components/_components.not-found.scss
@@ -1,4 +1,9 @@
 .c-not-found {
   background-color: var(--color-neutral-2);
   padding: $space-40;
+  display: flex;
+  flex-direction: column;
+  gap: $space-32;
+  align-items: center;
+  text-align: center;
 }
