--- a/src/assets/styles/05_components/_components.home.scss
+++ b/src/assets/styles/05_components/_components.home.scss
@@ -14,6 +14,12 @@
   position: relative;
 }
 
+.c-home__swiper-title {
+  @include min-width(lg) {
+    max-width: 50%;
+  }
+}
+
 .c-home__main {
   position: relative;
   z-index: 1;
