create type title component + add titles in home page + edit movies and tv page

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -66,7 +66,8 @@
 "05_components/components.movies",
 "05_components/components.home-search",
 "05_components/components.tag",
-"05_components/components.not-found"
+"05_components/components.not-found",
+"05_components/components.type-title"
 ;
 
 // ------------------ //
